# pycmaya

./: README.md  pyproject.toml
pycmaya/: __init__.py  __main__.py
tests/: test_pycmaya.py
